--- a/test.html
+++ b/test.html
@@ -265,6 +265,7 @@
     <!-- 分享 -->
     <section class="shareBox">
         <img src="http://static.qyer.com/m/project/other/zt/20160119companion/images/sharePic.jpg" class="pic" width="100%" alt="">
+	<img src="/img/code.jpg" />
         <a href="javascript:void(0);" class="btn js_showShare">
             <img src="http://static.qyer.com/m/project/other/zt/20160119companion/images/bt_answer_myself.png" height="40" alt="">
         </a>
