--- a/test.html
+++ b/test.html
@@ -265,8 +265,8 @@
     <!-- 分享 -->
     <section class="shareBox">
         <img src="http://static.qyer.com/m/project/other/zt/20160119companion/images/sharePic.jpg" class="pic" width="100%" alt="">
-	<img src="/img/code.jpg" />
-        <a href="javascript:void(0);" class="btn js_showShare">
+        <img src="/img/code.jpg" style="position: absolute;bottom: 25%;width: 30%;left: 0;right: 0;margin: auto;"/>
+        <a href="javascript:void(0);" class="btn js_showShare" style="bottom:15%;">
             <img src="http://static.qyer.com/m/project/other/zt/20160119companion/images/bt_answer_myself.png" height="40" alt="">
         </a>
     </section>
