--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="http://www.qyer.com/favicon.ico" />
 	<link href="http://static.qyer.com/min/?version=1456481565&f=m/basic/css/base.css,m/basic/css/headfoot.css,m/project/other/zt/20160119companion/css/index.css" rel="stylesheet" type="text/css" media="screen" />
 <script type="text/javascript" src="/js/zepto.js"></script>
-<script type="text/javascript" src="/js/zepto.touch.js"></script>
+<script type="text/javascript" src="/js/zepto-touch.js"></script>
 <script type="text/javascript" src="/js/index.js"></script>
 
 </head>
