--- a/travelPlace/index.html
+++ b/travelPlace/index.html
@@ -67,7 +67,7 @@
     <body>
         <div class="pic"></div>
         <p class="desc"><span id="name"></span>的气质最适合去</p>
-        <p class="dest">北极</p>
+        <p class="dest"></p>
         <ul class="btns">
             <li><a id="btn1" href="/travelPlace/test.html">我也要玩</a></li>
             <li><a id="btn2">更多好玩</a></li>
