--- a/travelPlace/index.html
+++ b/travelPlace/index.html
@@ -62,10 +62,14 @@
                 display: block;
                 width:100%;
             }
+            a {
+                text-decoration: none;
+            }
         </style>
     </head>
     <body>
         <div class="pic"></div>
+        <img style="display:none" class="picture" />
         <p class="desc"><span id="name"></span>的气质最适合去</p>
         <p class="dest"></p>
         <ul class="btns">
