--- a/travelPlace/test.html
+++ b/travelPlace/test.html
@@ -87,7 +87,7 @@
         </div>
         <div class="box">
             <h3>你的气质最适合去哪里旅游？</h3>
-            <p>你知道你的气质适合开什么车吗？赶紧来测试一下吧！</p>
+            <p>你知道你的气质适合去哪里旅游吗？赶紧来测试一下吧！</p>
             <input type="text" placeholder="请输入您的姓名" id="name" />
             <a onclick="toResult();">开始测试</a>
         </div>
