修改资源地址

--- a/travelPlace/test.html
+++ b/travelPlace/test.html
@@ -82,7 +82,7 @@
     </head>
     <body>
         <div class="banner" class="banner">
-            <img src="/img/9.jpg" />
+            <img src="img/9.jpg" />
             <span>你的气质最适合去哪里旅游？</span>
         </div>
         <div class="box">
@@ -92,9 +92,9 @@
             <a onclick="toResult();">开始测试</a>
         </div>
         <div class="code-box">
-            <img src="/img/code.jpg" />
+            <img src="img/code.jpg" />
             <p>长按识别二维码，一键关注</p>
         </div>
     </body>
-    <script type="text/javascript" src="/js/travelPlace.js"></script>
+    <script type="text/javascript" src="js/travelPlace.js"></script>
 </html>
