修改资源地址

--- a/travelPlace/index.html
+++ b/travelPlace/index.html
@@ -77,10 +77,10 @@
             <li><a id="btn2">更多好玩</a></li>
         </ul>
         <div class="bg">
-            <img src="img/guide.png" />
+            <img src="../img/guide.png" />
         </div>
     </body>
-    <script type="text/javascript" src="activity/js/travelPlace.js"></script>
+    <script type="text/javascript" src="../js/travelPlace.js"></script>
     <script type="text/javascript">
         init();
     </script>
