--- a/travelPlace/index.html
+++ b/travelPlace/index.html
@@ -73,7 +73,7 @@
         <p class="desc"><span id="name"></span>的气质最适合去</p>
         <p class="dest"></p>
         <ul class="btns">
-            <li><a id="btn1" href="/travelPlace/test.html">我也要玩</a></li>
+            <li><a id="btn1" href="test.html">我也要玩</a></li>
             <li><a id="btn2">更多好玩</a></li>
         </ul>
         <div class="bg">
