--- a/travelPlace/index.html
+++ b/travelPlace/index.html
@@ -10,12 +10,9 @@
         <style type="text/css">
             .pic {
                 width: 270px;
-                padding: 135px 0;
                 border-radius: 270px;
-                margin: 0 auto;
-                background-size: 540px;
-                background-repeat: no-repeat;
-                background-position-x: -112px;
+                display: block;
+                margin: 15px auto;
             }
             .desc {
                 margin: 10px;
@@ -68,8 +65,7 @@
         </style>
     </head>
     <body>
-        <div class="pic"></div>
-        <img style="display:none" class="picture" />
+        <img class="pic" />
         <p class="desc"><span id="name"></span>的气质最适合去</p>
         <p class="dest"></p>
         <ul class="btns">
