--- a/travelPlace/test.html
+++ b/travelPlace/test.html
@@ -82,7 +82,7 @@
     </head>
     <body>
         <div class="banner" class="banner">
-            <img src="../img/9.jpg" />
+            <img src="../img/cover.jpg" />
             <span>你的气质最适合去哪里旅游？</span>
         </div>
         <div class="box">
